# FigureData

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
dataset/: data.yaml
dataset/data/: (124).txt  (130).txt  (133).txt  (135).txt  (152).txt  (154).txt  (163).txt  (170).txt  (81).txt  2_C3M0280090D 900 V Discrete SiC MOSFET Data Sheet _ Wolfspeed.txt  2_Wolfspeed_C2M1000170J_data_sheet.pdf.txt  2_Wolfspeed_C3M0030090K_data_sheet.pdf.txt  2_Wolfspeed_C3M0065090J_data_sheet.pdf.txt  2_Wolfspeed_C3M0120090D_data_sheet.pdf.txt  2_Wolfspeed_C3M0120100K_data_sheet.pdf.txt  2_Wolfspeed_C3M0280090J_data_sheet.pdf.txt  2_Wolfspeed_C3M0350120D_data_sheet.pdf.txt  2_sqjq910el (1).pdf.txt  3_C3M0280090D 900 V Discrete SiC MOSFET Data Sheet _ Wolfspeed.pdf.txt  3_Wolfspeed_C2M0160120D_data_sheet.pdf.txt  3_Wolfspeed_C3M0030090K_data_sheet.pdf.txt  3_Wolfspeed_C3M0065090D_data_sheet.pdf.txt  3_Wolfspeed_C3M0065090J_data_sheet.pdf.txt  3_Wolfspeed_C3M0065100J_data_sheet.pdf.txt  3_Wolfspeed_C3M0075120J_data_sheet.pdf.txt  3_Wolfspeed_C3M0075120K_data_sheet.pdf.txt  3_Wolfspeed_C3M0120090D_data_sheet.pdf.txt  3_Wolfspeed_C3M0120090J_data_sheet.pdf.txt  3_Wolfspeed_C3M0120100J_data_sheet.pdf.txt  3_Wolfspeed_C3M0120100K_data_sheet.pdf.txt  3_Wolfspeed_C3M0280090J_data_sheet.pdf.txt  3_Wolfspeed_C3M0350120D_data_sheet.pdf.txt  3_Wolfspeed_E3M0120090J_data_sheet.pdf.txt  4_SIL2324A(SOT23-6L).pdf.txt  4_Wolfspeed_C2M0080120D_data_sheet.pdf.txt  4_Wolfspeed_C3M0065100J_data_sheet.pdf.txt  4_Wolfspeed_C3M0350120D_data_sheet.pdf.txt  5_Infineon-IPG20N10S4L_22-DS-v01_01-en.pdf.txt  5_Infineon-IPP039N10N5-DS-v02_00-EN.pdf.txt  5_Wolfspeed_C2M0080120D_data_sheet.pdf.txt  (+29 more)
dataset/old_data/:  (10).txt   (4).txt   (5).txt   (6).txt   (7).txt   (8).txt   (9).txt  (101).txt  (102).txt  (103).txt  (104).txt  (105).txt  (106).txt  (107).txt  (108).txt  (109).txt  (110).txt  (111).txt  (112).txt  (113).txt  (114).txt  (115).txt  (116).txt  (117).txt  (118).txt  (119).txt  (120).txt  (121).txt  (122).txt  (123).txt  (124).txt  (125).txt  (126).txt  (127).txt  (128).txt  (129).txt  (130).txt  (131).txt  (132).txt  (133).txt  (+289 more)
dataset/train/labels/: (115).txt  (119).txt  (162).txt  (7).txt  2_Wolfspeed_C2M1000170D_data_sheet.pdf.txt  2_Wolfspeed_C3M0065100J_data_sheet.pdf.txt  2_Wolfspeed_C3M0065100K_data_sheet.pdf.txt  2_Wolfspeed_C3M0120090J_data_sheet.pdf.txt  3_CMLDM7585.pdf.txt  3_Wolfspeed_C2M0025120D_data_sheet.pdf.txt  3_Wolfspeed_C2M0040120D_data_sheet.pdf.txt  3_Wolfspeed_C2M0045170D_data_sheet.pdf.txt  3_Wolfspeed_C2M1000170D_data_sheet.pdf.txt  3_Wolfspeed_C3M0040120J1_data_sheet.pdf.txt  3_Wolfspeed_C3M0350120J_data_sheet.pdf.txt  3_sqjq910el.pdf.txt  4_C3M0280090D 900 V Discrete SiC MOSFET Data Sheet _ Wolfspeed.pdf.txt  4_Wolfspeed_C2M0040120D_data_sheet.pdf.txt  4_Wolfspeed_C2M0160120D_data_sheet.pdf.txt  4_Wolfspeed_C2M0280120D_data_sheet.pdf.txt  (+28 more)
dataset/validation/labels/: (76).txt  (+20 more)
detect/: __init__.py  detect_figure.py  train_figure.py  train_figure_detector.py
detector/: __init__.py  figure_detector.py  train_figure_detector.py
figure_dataset/: data.yaml
scripts/: __init__.py  download_models.py  split_data.py  test_gpu.py
(+57 files in other folders)
